--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -13,6 +13,26 @@ services:
     volumes:
       - ./server:/test
 
+  ubuntu-server-dva:
+    container_name: deployment-server-dva
+    build:
+      context: '.'
+    ports:
+      - "2223:22"
+    networks:
+      - deployment-network
+    volumes:
+      - ./server-dva:/test
+
+  test-ubuntu-19:
+    image: ubuntu:19.10
+    container_name: deployment-ubuntu-19
+    ports:
+      - "2224:22"
+    networks:
+      - deployment-network
+    volumes:
+      - ./ubuntu19:/test
 
   mysql-db:
     image: mariadb:10.3
